# AgentHub-----RustWithQWen

./: .gitignore  Cargo.toml  build.rs  test_run.ps1
benches/: llm_benchmark.rs  parser_benchmark.rs
config/: agenthub.yaml
docs/: README.md  Skill开发指南.md  开发实战指南.md  项目功能文档.md  项目规范和需求文档.md
examples/skill-hello-world/: Cargo.toml  README.md  SKILL.md  manifest.yaml
examples/skill-hello-world/src/: lib.rs
skills/test-skill/: impl.wasm  manifest.yaml  skill_config.yaml
src/: error.rs  main.rs
src/api/: mod.rs
src/api/cli/: commands.rs  mod.rs  nl_command_parser.rs  repl.rs
src/api/http/: handlers.rs  mod.rs  routes.rs
src/audit/: mod.rs  signed_log.rs
src/config/: mod.rs
src/guardrails/: file_access.rs  input_validator.rs  mod.rs  network_guard.rs  output_sanitizer.rs  pii_detector.rs  prompt_injection.rs  rate_limiter.rs  semantic_analyzer.rs  unicode_security.rs
src/llm/: cache.rs  mock.rs  mod.rs  multi_client.rs  ollama.rs  openai.rs
src/metrics/: mod.rs
src/parser/: ast_utils.rs  js_parser.rs  language_registry.rs  mod.rs  python_parser.rs  rust_parser.rs
src/prompt/: context_manager.rs  conversation.rs  mod.rs  model_adapter.rs
src/prompt/templates/: code_explainer.rs  mod.rs
src/recovery/: circuit_breaker.rs  fallback.rs  mod.rs  resilient_llm.rs
src/skill/: manager.rs  mod.rs
src/skill/builtins/: code_explainer.rs  mod.rs  test_generator.rs
src/skill/skillhub/: client.rs  mod.rs  models.rs  registry.rs
src/utils/: hash.rs  markdown.rs  memory.rs  mod.rs
