[package]
name = "agenthub"
version = "0.1.0"
edition = "2021"
description = "安全、可编程、Skill 驱动的本地 AI 执行引擎"
license = "MIT"
keywords = ["ai", "llm", "code-assistant", "local", "security"]
categories = ["development-tools"]

[workspace.dependencies]
tree-sitter = "0.21.0"
tree-sitter-rust = "0.21.0"
tree-sitter-python = "0.21.0"
tree-sitter-javascript = "0.21.0"
tree-sitter-typescript = "0.21.0"

[dependencies]
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "fs",
    "signal",
    "time",
    "io-std",
] }

axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tower = "0.4"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

thiserror = "1"
anyhow = "1"

config = "0.14"
dirs = "5"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.23"
metrics-exporter-prometheus = { version = "0.15", optional = true }

clap = { version = "4", features = ["derive"] }
rustyline = "14"

reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"], default-features = false }
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"

tree-sitter.workspace = true
tree-sitter-rust = { workspace = true, optional = true }
tree-sitter-python = { workspace = true, optional = true }
tree-sitter-javascript = { workspace = true, optional = true }
tree-sitter-typescript = { workspace = true, optional = true }

regex = "1"
secrecy = "0.8"
zeroize = "1"
base64 = "0.22"
unicode-normalization = "0.1"

chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
lru = "0.12"
backoff = "0.4"
rand = "0.8"
handlebars = "5"
tiktoken-rs = "0.5"
once_cell = "1"
sha2 = "0.10"
hmac = "0.12"
lazy_static = "1.4"
comrak = "0.24"
crossterm = "0.27"

wasmtime = "15"
wasmtime-wasi = "15"
libloading = "0.8"

[features]
default = ["core-languages"]
core-languages = [
    "dep:tree-sitter-rust",
    "dep:tree-sitter-python",
    "dep:tree-sitter-javascript",
    "dep:tree-sitter-typescript",
]
metrics-prometheus = ["dep:metrics-exporter-prometheus"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
assert_cmd = "2"
predicates = "3"
wiremock = "0.6"
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "agenthub"
path = "src/main.rs"

[[bench]]
name = "llm_benchmark"
harness = false

[[bench]]
name = "parser_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
